@@ -927,8 +927,21 @@
   </property>
 
   <property>
+    <description>This determines which of the two modes that LCE should use on a non-secure
+    cluster.  If this value is set to true, then all containers will be launched as the user 
+    specified in yarn.nodemanager.linux-container-executor.nonsecure-mode.local-user.  If 
+    this value is set to false, then containers will run as the user who submitted the 
+    application.
+    </description>
+    <name>yarn.nodemanager.linux-container-executor.nonsecure-mode.limit-users</name>
+    <value>true</value>
+  </property>
+
+  <property>
     <description>The UNIX user that containers will run as when Linux-container-executor
-    is used in nonsecure mode (a use case for this is using cgroups).</description>
+    is used in nonsecure mode (a use case for this is using cgroups) if the
+    yarn.nodemanager.linux-container-executor.nonsecure-mode.limit-users is set 
+    to true.</description>
     <name>yarn.nodemanager.linux-container-executor.nonsecure-mode.local-user</name>
     <value>nobody</value>
   </property>
